src/test/ui/suggestions/missing-bound-in-derive-copy-impl-2.stderr
error[E0277]: the trait bound `K: Copy` is not satisfied
  --> $DIR/missing-bound-in-derive-copy-impl-2.rs:12:14
   |
LL |     pub loc: Vector2<K>,
   |              ^^^^^^^^^^ the trait `Copy` is not implemented for `K`
   |
note: required by a bound in `Vector2`
  --> $DIR/missing-bound-in-derive-copy-impl-2.rs:5:31
   |
LL | pub struct Vector2<T: Debug + Copy + Clone>{
   |                               ^^^^ required by this bound in `Vector2`
help: consider further restricting this bound
   |
LL | pub struct AABB<K: Debug + std::marker::Copy>{
   |                          +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
